Current (trunk)
	- Update tests to be compatible with Lua version
	- Improve display of message when compiling
	- Improve RSS factory by only generating those that's expected
	- Change posts generation bash script by a Lua script named process.lua
	- Fix bug on tags that have space in their name
	- Change BASE_URL to BLOG_URL

Version 0.2.1 (released 2013-05-31)
	- Improve Bootstrap theme with glyphicons
	- You can choose a "FLAVOR" for your theme in order to change colors
	- Add new commands: 'help' and 'list' that give all available commands
	- Add new commands: 'createpost' and 'add' in order to create a new post
	- Add new command: 'install'
	- Clean up meta data file (delete DATE useless field)
	- Add new command: 'theme' to create your theme
	- Add new command: 'version' to give your current version
	- Improve documentation
	- Permit to use a prefix for JSKOMMENT identification. If none, use default
	BASE_URL
	- Fix ELI to use ELI_API choosen by the user (if given)
	- Display new created postname for user to edit it

Version 0.2 (released 2013-04-17)
	- Add jskomment as optional comment system
	- Permit to customize jskomment comment system content
	- Permit to choose for each theme an optional CSS color file. This permit to
	  have a CSS to place all elements, then another one to adapt colors.
	- Check variable to be unique in templates
	- Update documentation
	- Statuses from identica
	- Introduction: permit a user to add an introduction to its website
	- Kind of conclusion/credits/licence: permit a user to add a footer to its
	website with all text it wants. Example: add credits to its website
	- Only publish posts with a timestamp inferior to current's one (permit to
	create posts ahead of current datetime)
	- Permit user to choose a compression tool and a compression extension for
	backups
	- Also backup theme choosen by the user in the makefly.rc file
	- Fix bug on carriage return
	- Some minisch theme improvements