@@ -29,3 +29,4 @@ LEGEND_TITLE = Caption
 CONTENT_TITLE = Content
 NAVIGATION_MENU_TITLE = Navigation
 FOOTER_PAGE_TITLE = Footer
+GO_TO_THE_TOP = Top of the page
