@@ -15,6 +15,8 @@
   </aside>
 
   <footer id="footer">
+    <p id="top"><a href="#content">${GO_TO_THE_TOP}</a></p>
+    <hr />
     <p>${POWERED_BY} <a href="http://makefly.e-mergence.org/" title="Makefly">Makefly</a> (<a href="http://gitorious.org/makefly/" title="${SOURCE_LINK_TITLE}">${SOURCE_LINK_NAME} gitorious</a>)<br />
     ${THEME_IS} ${CSS_NAME}</p>
     <div id="special_footer">
